fix table alignment

--- a/axis/_tables.css
+++ b/axis/_tables.css
@@ -20,6 +20,7 @@
     & th, & td {
       padding: .5em 1em;
       border-top: var(--table-border);
+      text-align: inherit;      
     }
 
     & tr th {
